# pydantic-ai-funds

./: main.py  pyproject.toml
examples/chatbot/: chatbot.py  main.py
examples/chatbot/static/css/: style.css
examples/chatbot/static/js/: app.js
examples/chatbot/static/js/components/: ChatBox.vue.js  NotificationWidget.vue.js  SessionList.vue.js  TopicListPanel.vue.js
examples/chatbot/templates/: index.html  models.py
notebooks/1_basics/: 04_tools.ipynb  05_output.ipynb  06_messages_n_chat_history.ipynb
