[project]
name = "pydantic-ai-funds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "types-passlib>=1.7.7.20250408",
]
